# Exp-rob-assignment1

./: README.md
src/aruco_ros/src/: marker_publish.cpp
src/rosbot_description/config/: joint_state_controller.yaml
src/rosbot_description/urdf/: rosbot.gazebo  rosbot.xacro
src/rosbot_gazebo/: CMakeLists.txt  package.xml
src/rosbot_gazebo/launch/: assignment.launch  assignment_gazebo.launch  assignment_rosbot.launch  assignment_sim.launch  real_rosbot.launch  rosbot_world.launch
src/rosbot_navigation/scripts/: camera_controller.py  following.py  movement_controller.py  real_robot_controller.py  robot_camera_control.py  robot_controller.py  sim_robot_controller.py
